<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context=".LoginActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            >

            <TextView
                android:id="@+id/firstname_textview_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstname_label" />

            <EditText
                android:id="@+id/firstname_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" >

                <requestFocus />
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/middleinitial_textview_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/middleinitial_label" />

            <EditText
                android:id="@+id/middleinitial_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lastname_textview_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastname_label" />

            <EditText
                android:id="@+id/lastname_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/email_textview_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_label" />

            <EditText
                android:id="@+id/email_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textEmailAddress" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/contact1_textview_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number1_label" />

            <EditText
                android:id="@+id/contact1_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="phone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/contact2_textview_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number2_label" />

            <EditText
                android:id="@+id/contact2_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="phone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/address1_textview_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address1_label" />

            <EditText
                android:id="@+id/address1_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/address_2_textview_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address2_label" />

            <EditText
                android:id="@+id/address2_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/city_textview_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city_label" />

            <EditText
                android:id="@+id/city_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/state_textview_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/state_label" />

            <EditText
                android:id="@+id/state_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/zipcode_textview_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zipcode_label" />

            <EditText
                android:id="@+id/zipcode_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/save_login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Save Login" />

            <Button
                android:id="@+id/cancel_login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cancel" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>