<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/EventNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/event_name_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_name_label" />

            <EditText
                android:id="@+id/event_name_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" >

                <requestFocus />
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LocationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/location_label_item"
                android:layout_width="130dp"
                android:layout_height="32dp"
                android:layout_weight="0.63"
                android:text="@string/location_label" />

            <Button
                android:id="@+id/location_button"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:onClick="clickListener"
                android:text="@string/location_button_label" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/StartTimeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/start_time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_time_label" />

            <TimePicker
                android:id="@+id/start_time_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/EndTimeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/end_time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_time_label" />

            <TimePicker
                android:id="@+id/end_time_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <DatePicker
                android:id="@+id/event_date_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/financial_name_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Event Date" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>